flexing fixed align and direction with guide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,11 @@ body {
 	background-size: cover;
 	background-position: center; 
 	flex: 1;
+	justify-content: center;
+	align-items:center;
+	display: flex;
+	flex-direction: column;  /*default is left to right*/
+
 }
 
 .panel1 {
@@ -56,10 +61,13 @@ body {
 	background-image: url(../images/JSweb4.jpg); 
 }
 
+/*Flex Children*/
 .panel > * {
 	margin:0;
 	width: 100%;
 	transition:transform 0.5s;
+	/*guide lines*/
+	border: 1px solid red;
 }
 
 .panel p {
